--- a/input.css
+++ b/input.css
@@ -5,7 +5,7 @@ body {
     align-items: center;
     height: 100vh;
     background-color: white;
-    background-image: url('img/images.jpg'); /* Update this line */
+    background-image: url('images.jpg'); /* Update this line */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
