--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    height: auto;
 }
 
 .container {
