--- a/input.css
+++ b/input.css
@@ -3,7 +3,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 90vh;
     background-color: white;
     background-image: url('images.jpg'); /* Update this line */
     background-size: cover;
@@ -21,6 +21,7 @@ body {
 
 h1 {
     color: #333;
+    font-size: 3rem;
     margin-bottom: 20px;
 }
 
@@ -46,13 +47,13 @@ h1 {
 }
 
 button {
-    padding: 10px 20px;
+    padding: 1rem 2rem;
     background-color: #007bff;
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 1.4rem;
 }
 
 button:hover {
@@ -92,4 +93,16 @@ button:hover {
 .header nav ul li a:hover {
     background-color: #ddd;
     color: black;
+}
+
+.footer {
+    width: 100%;
+    background-color: #060232;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    bottom: 0;
+    left: 0;
+    margin-top: auto; /* Ensures it stays at the bottom when content is less */
+    position: fixed;
 }
